# ClothSimulator

./: CMakeLists.txt  README.md
include/: Window.h  cloth.h  clothSimulator.h  handleInputs.h  particle.h  render.h  renderSDL.h  simulator.h  spring.h  vec2.h
shaders/: particle.frag  particle.vert
src/: Window.cpp  clothSimulator.cpp  handleInputs.cpp  main.cpp  render.cpp  renderSDL.cpp  simulator.cpp
